# pub-search

./: .gitignore  CLAUDE.md  COSTS.md  README.md  banned-dids.txt  fly.toml  kept-dids.txt
backend/: .dockerignore  Dockerfile  build.zig  build.zig.zon  fly.toml  justfile
docs/: README.md  access-pattern-audit.md  agent-surfaces.md  api.md  atlas.md  bridgy-fed.md  constellation.md  content-extraction.md  corpus-audit-2026-07-20.md  exclusions.md  hydrant.md  leaflet-publishing-plan.md  migrations.md  performance-saga.md  prefect-rebuild-atlas-oom-2026-06-05.md  reconciliation.md  retro-2026-06-10-cutover-cascade.md  retro-2026-07-15-stale-snapshot-builder-hang.md  scaling-plan.md  search-architecture.md  search-syntax.md  snapshot-pipeline.md  spam-detection-plan.md  standard-search-planning.md  tap.md  turso-hrana.md  zig-patterns.md
ingester/: Dockerfile  build.zig  build.zig.zon  fly.toml
mcp/: README.md  pyproject.toml
pub-search-mcp/: .mcp.json  pyproject.toml
pub-search-mcp/.claude-plugin/: plugin.json
pub-search-mcp/server/: README.md  pyproject.toml
pub-search-mcp/server/src/pub_search/: client.py  server.py
pub-search-mcp/server/tests/: test_mcp.py
pub-search-mcp/src/pub_search/: client.py  server.py
pub-search-mcp/tests/: test_mcp.py
repros/: zig-21316-pool-poisoning.zig
scripts/: apply-corpus-reconciliation  audit-corpus  backfill  backfill-content-type  backfill-cover-images  backfill-embeddings  backfill-pckt-platform  backfill-pds  backfill-publications  backfill-recommends  backfill-subscriptions  bench-search  build-atlas  build-constellation  build-facts  check-tables  check-vector  classify-bulk-mirror  cleanup-vector-index  daily-discovery  dashboard.py  diagnose-latency.py  enumerate-standard-repos  exercise-api  fixup-subscription-created-at  fly_machines.py  guard-snapshot-builder  ingestion-watchdog  judge-eval  labeler-setup  latency  mark-bridgyfed  (+18 more)
(+146 files in other folders)
