[project]
name = "pub-search"
dynamic = ["version"]
description = "MCP server for searching ATProto publishing platforms (Leaflet, pckt, and more)"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"

keywords = ["pub-search", "mcp", "atproto", "publications", "search", "fastmcp", "leaflet", "pckt"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.28",
    "pdsx",
]

[project.scripts]
pub-search = "pub_search.server:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pub_search"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-sugar",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["COM812"]
extend-select = ["B", "C4", "I", "PIE", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]

[tool.uv.sources]
pdsx = { git = "https://github.com/zzstoatzz/pdsx.git" }
